--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,14 @@ categories = ["network-programming"]
 license = "MIT"
 
 [dependencies]
-pnet = "0.26"
-default-net = "0.1.1"
+default-net = "0.2.0"
 clap = "2.33"
 crossterm = "0.19"
 sudo = "0.6"
 chrono = "0.4"
+
+[target.'cfg(not(windows))'.dependencies]
+pnet = "0.27"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+pnet = "0.26"
