--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pdump"
 version = "0.1.0"
 authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 description = "Cross-platform packet capture tool"
 repository = "https://github.com/shellrow/pdump"
 readme = "README.md"
@@ -11,10 +11,10 @@ categories = ["network-programming"]
 license = "MIT"
 
 [dependencies]
-default-net = "0.3.0"
-clap = "2.33"
+default-net = "0.15.0"
+clap = { version = "3.1", features = ["cargo"] }
 chrono = "0.4"
-pnet = "0.28"
+pnet = "0.33.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = [ "std" ] }
